--- a/artifacts/A9/A9.md
+++ b/artifacts/A9/A9.md
@@ -5,24 +5,96 @@
 
 ##### M01: Authentication and Individual Profile
 <table>
-    <tr>
-      <th>SQL101</th>
-      <td>Creates a new user in the platform</td>
-    </tr>
-    <tr>
-      <th>Web Resource</th>
-      <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r103-register-action">R103</a></td>
-    </tr>
-    <tr>
-      <td colspan='2'>
-      ```SQL
-     insert into usertable (username, password, email, premium, banned,
-     ($username, $password, $email, FALSE, FALSE, $name, $gender, $address,
-     name, gender, address, institution, description, birthDate, idCountry) values
-     $institution, $description, $birthDate, $idCountry)
-     ```
-      </td>
-    </tr>
+  <tr>
+    <th>SQL101</th>
+    <td>Creates a new user in the platform</td>
+  </tr>
+  <tr>
+    <th>Web Resource</th>
+    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r103-register-action">R103</a></td>
+  </tr>
+  <tr>
+    <td colspan='2'>
+    ```SQL
+    insert into usertable (username, password, email, premium, banned, name, gender, address, institution, description, birthDate, idCountry) values ($username, $password, $email, FALSE, FALSE, $name, $gender, $address, $institution, $description, $birthDate, $idCountry) 
+   ```
+    </td>
+  </tr>
+</table>
+
+<table>
+  <tr>
+    <th>SQL102</th>
+    <td>Creates a new user in the platform</td>
+  </tr>
+  <tr>
+    <th>Web Resource</th>
+    <<td><a></a></td>
+  </tr>
+  <tr>
+    <td colspan='2'>
+    ```SQL
+    insert into project (creationDate, name, description, private) values ($creationDate, $name, $description, false);
+    ```
+    </td>
+  </tr>
+</table>
+
+<table>
+  <tr>
+    <th>SQL103</th>
+    <td>Get project members</td>
+  </tr>
+  <tr>
+    <th>Web Resource</th>
+    <td><a></a></td>
+  </tr>
+  <tr>
+    <td colspan='2'>
+    ```SQL
+    select * from usertable, project where deadline > CURRENT_DATE and idProject = $idProject
+    order by deadline asc;
+    ```
+    </td>
+  </tr>
+</table>
+
+<table>
+  <tr>
+    <th>SQL104</th>
+    <td>Get project tasks</td>
+  </tr>
+  <tr>
+    <th>Web Resource</th>
+    <td><a></a></td>
+  </tr>
+  <tr>
+    <td colspan='2'>
+    ```SQL
+    select name, deadline from task where deadline > CURRENT_DATE and idProject = $idProject
+    order by deadline asc;
+    ```
+    </td>
+  </tr>
+</table>
+
+<table>
+  <tr>
+    <th>SQL105</th>
+    <td>Get project forum posts</td>
+  </tr>
+  <tr>
+    <th>Web Resource</th>
+    <td><a></a></td>
+  </tr>
+  <tr>
+    <td colspan='2'>
+    ```SQL
+    select * from forumpost where idProject = $idProject
+    order by lastEditDate asc;
+    ```
+    </td>
+  </tr>
 </table>
 
 ## 2. Transactions
