Added more to main accesses

--- a/artifacts/A9/A9.md
+++ b/artifacts/A9/A9.md
@@ -1,139 +1,476 @@
 # A9: Main accesses to the database and transactions
-
+ 
 ## 1. Main Accesses
+
+#M01: Authentication and Individual Profile
+ 
 > Main accesses to the database.
+ 
 
-##### M01: Authentication and Individual Profile
-<table>
-  <tr>
-    <th>SQL101</th>
-    <td>Creates a new user in the platform</td>
-  </tr>
-  <tr>
-    <th>Web Resource</th>
-    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r103-register-action">R103</a></td>
-  </tr>
-  <tr>
-    <td colspan='2'>
-    ```SQL
-    insert into usertable (username, password, email, premium, banned, name, gender, address, institution, description, birthDate, idCountry) values ($username, $password, $email, FALSE, FALSE, $name, $gender, $address, $institution, $description, $birthDate, $idCountry) 
-   ```
-    </td>
-  </tr>
-</table>
 
 <table>
-  <tr>
-    <th>SQL102</th>
-    <td>Creates a new user in the platform</td>
-  </tr>
-  <tr>
-    <th>Web Resource</th>
-    <<td><a></a></td>
-  </tr>
-  <tr>
-    <td colspan='2'>
-    ```SQL
-    insert into project (creationDate, name, description, private) values ($creationDate, $name, $description, false);
-    ```
-    </td>
-  </tr>
+<tr>
+<th>SQL101</th>
+<td>Creates a new user in the platform</td>
+</tr>
+<tr>
+<th>Web Resource</th>
+<td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r103-register-action">R2103</a></td>
+</tr>
+<tr>
+<td colspan='2'>
+  
+ ```SQL
+insert into usertable (username, password, email, premium, banned, 
+name, gender, address, institution, description, birthDate, idCountry) 
+values ($username, $password, $email, FALSE, FALSE, $name, $gender, 
+$address, $institution, $description, $birthDate, $idCountry)
+``` 
+</td>
+</tr>
 </table>
+
 
 <table>
-  <tr>
-    <th>SQL103</th>
-    <td>Get project members</td>
-  </tr>
-  <tr>
-    <th>Web Resource</th>
-    <td><a></a></td>
-  </tr>
-  <tr>
-    <td colspan='2'>
-    ```SQL
-    select * from usertable, project where deadline > CURRENT_DATE and idProject = $idProject
-    order by deadline asc;
-    ```
-    </td>
-  </tr>
+<tr>
+<th>SQL102</th>
+<td>Creates a new project in the platform</td>
+</tr>
+<tr>
+<th>Web Resource</th>
+<td><a></a></td>
+</tr>
+<tr>
+<td colspan='2'>
+
+```SQL
+insert into project (creationDate, name, description, private) 
+values ($creationDate, $name, $description, false);
+```
+</td>
+</tr>
 </table>
+
 
 <table>
-  <tr>
-    <th>SQL104</th>
-    <td>Get project tasks</td>
-  </tr>
-  <tr>
-    <th>Web Resource</th>
-    <td><a></a></td>
-  </tr>
-  <tr>
-    <td colspan='2'>
-    ```SQL
-    select name, deadline from task where deadline > CURRENT_DATE and idProject = $idProject
-    order by deadline asc;
-    ```
-    </td>
-  </tr>
+<tr>
+<th>SQL103</th>
+<td>Get project members</td>
+</tr>
+<tr>
+<th>Web Resource</th>
+<td><a></a></td>
+</tr>
+<tr>
+<td colspan='2'>
+  
+```SQL
+select * from usertable, project where deadline > CURRENT_DATE and idProject = $idProject
+order by deadline asc;
+```  
+</td>
+</tr>
 </table>
+
 
 <table>
-  <tr>
-    <th>SQL105</th>
-    <td>Get project forum posts</td>
-  </tr>
-  <tr>
-    <th>Web Resource</th>
-    <td><a></a></td>
-  </tr>
-  <tr>
-    <td colspan='2'>
-    ```SQL
-    select * from forumpost where idProject = $idProject
-    order by lastEditDate asc;
-    ```
-    </td>
-  </tr>
+<tr>
+<th>SQL104</th>
+<td>Get project tasks</td>
+</tr>
+<tr>
+<th>Web Resource</th>
+<td><a></a></td>
+</tr>
+<tr>
+<td colspan='2'>
+
+```SQL
+select * from usertable, project where deadline > CURRENT_DATE and idProject = $idProject
+order by deadline asc;
+```
+</td>
+</tr>
 </table>
 
+
+<table>
+<tr>
+<th>SQL105</th>
+<td>Get project description</td>
+</tr>
+<tr>
+<th>Web Resource</th>
+<td><a></a></td>
+</tr>
+<tr>
+<td colspan='2'></td>
+  
+```SQL
+select description from project where idProject = $idProject
+```
+</tr>
+</table>
+
+
+<table>
+<tr>
+<th>SQL106</th>
+<td>Get project name</td>
+</tr>
+<tr>
+<th>Web Resource</th>
+<td><a></a></td>
+</tr>
+<tr>
+<td colspan='2'>
+
+```SQL
+select name from project where idProject = $idProject
+``` 
+</td>
+</tr>
+</table>
+
+
+<table>
+<tr>
+<th>SQL107</th>
+<td>Get project members</td>
+</tr>
+<tr>
+<th>Web Resource</th>
+<td><a></a></td>
+</tr>
+<tr>
+<td colspan='2'>
+ 
+ ```SQL
+select username, password, email, name, gender, address, institution, description, birthDate, idCountry 
+from usertable, project, joined 
+where project.idProject = joined.idProject AND usertable.idUser = joined.idUser AND joined.idProject = $idProject;
+```
+</td>
+</tr>
+</table>
+
+
+<table>
+<tr>
+<th>SQL108</th>
+<td>Invite a user to the project</td>
+</tr>
+<tr>
+<th>Web Resource</th>
+<td><a></a></td>
+</tr>
+<tr>
+<td colspan='2'>
+  
+```SQL
+insert into joined (idUser, idProject, joinedDate, role)
+values ($idUser, $idProject, $joinedDate, $role)
+```  
+</td>
+</tr>
+</table>
+
+
+<table>
+<tr>
+<th>SQL109</th>
+<td>Remove a user from a project</td>
+</tr>
+<tr>
+<th>Web Resource</th>
+<td><a></a></td>
+</tr>
+<tr>
+<td colspan='2'>
+
+```SQL
+delete from joined 
+where idUser = $idUser 
+AND idProject = $idProject;
+```
+</td>
+</tr>
+</table>
+
+
+<table>
+<tr>
+<th>SQL110</th>
+<td>Set user role</td>
+</tr>
+<tr>
+<th>Web Resource</th>
+<td><a></a></td>
+</tr>
+<tr>
+<td colspan='2'>
+
+```SQL
+update joined
+set role = $role
+where idUser = $idUser AND idProject = $idProject
+```
+</td>
+</tr>
+</table>
+
+
+<table>
+<tr>
+<th>SQL111</th>
+<td>Get project forum posts</td>
+</tr>
+<tr>
+<th>Web Resource</th>
+<td><a></a></td>
+</tr>
+<tr>
+<td colspan='2'>
+ 
+```SQL
+select * from forumpost where idProject = $idProject
+order by lastEditDate asc;
+``` 
+</td>
+</tr>
+</table>
+
+
+<table>
+<tr>
+<th>SQL111</th>
+<td>Get project forum posts</td>
+</tr>
+<tr>
+<th>Web Resource</th>
+<td><a></a></td>
+</tr>
+<tr>
+<td colspan='2'>
+ 
+```SQL
+select * from forumpost where idProject = $idProject
+order by lastEditDate asc;
+```
+</td>
+</tr>
+</table>
+
+
+<table>
+<tr>
+<th>SQL112</th>
+<td>Get project forum post replies</td>
+</tr>
+<tr>
+<th>Web Resource</th>
+<td><a></a></td>
+</tr>
+<tr>
+<td colspan='2'>
+ 
+```SQL
+select * from reply where reply.idPost = $idPost
+order by creationDate asc;
+``` 
+</td>
+</tr>
+</table>
+
+
+<table>
+<tr>
+<th>SQL113</th>
+<td>Submit a new post</td>
+</tr>
+<tr>
+<th>Web Resource</th>
+<td><a></a></td>
+</tr>
+<tr>
+<td colspan='2'>
+  
+```SQL
+insert into forumpost (creationDate, lastEditDate, 
+title, content, idProject, idUser) 
+values ($date, $date, $title, $content, $idProject, $idUser);
+```  
+</td>
+</tr>
+</table>
+
+
+
+<table>
+<tr>
+<th>SQL114</th>
+<td>Submit a reply to a post</td>
+</tr>
+<tr>
+<th>Web Resource</th>
+<td><a></a></td>
+</tr>
+<tr>
+<td colspan='2'>
+  
+```SQL
+insert into forumpost (creationDate, lastEditDate, 
+title, content, idProject, idUser) 
+values ($date, $date, $title, $content, $idProject, $idUser);
+```
+</td>
+</tr>
+</table>
+
+
+<table>
+<tr>
+<th>SQL115</th>
+<td>Update post content</td>
+</tr>
+<tr>
+<th>Web Resource</th>
+<td><a></a></td>
+</tr>
+<tr>
+<td colspan='2'>
+
+```SQL
+update forumpost
+set content = $content 
+where idPost = $idPost;
+``` 
+</td>
+</tr>
+</table>
+
+
+
+<table>
+<tr>
+<th>SQL116</th>
+<td>Get project tasks</td>
+</tr>
+<tr>
+<th>Web Resource</th>
+<td><a></a></td>
+</tr>
+<tr>
+<td colspan='2'></td>
+</tr>
+</table>
+
+
+<table>
+<tr>
+<th>SQL117</th>
+<td>Add a task</td>
+</tr>
+<tr>
+<th>Web Resource</th>
+<td><a></a></td>
+</tr>
+<tr>
+<td colspan='2'>
+  
+```SQL
+insert into task (creationDate, lastEditDate, title, description, 
+deadline, completed, completetionDate, idUser, idProject)
+values ($date, $date, $title, $description, $deadline,
+FALSE, NULL, $idUser, $idProject)
+```  
+</td>
+</tr>
+</table>
+
+
+<table>
+<tr>
+<th>SQL118</th>
+<td>Delete a task</td>
+</tr>
+<tr>
+<th>Web Resource</th>
+<td><a></a></td>
+</tr>
+<tr>
+<td colspan='2'>
+ 
+```SQL
+delete from tasks 
+where idTask = $idTask;
+``` 
+</td>
+</tr>
+</table>
+
+
+<table>
+<tr>
+<th>SQL119</th>
+<td>Complete task</td>
+</tr>
+<tr>
+<th>Web Resource</th>
+<td><a></a></td>
+</tr>
+<tr>
+<td colspan='2'>
+
+```SQL
+update task set completed = true 
+where idTask = $idTask;
+```
+</td>
+</tr>
+</table>
+
+...
 ## 2. Transactions
+
 > Transactions needed to assure the integrity of the data.
-
+ 
 <table>
-  <tr>
-    <th>T01</th>
-    <td>--TODO--</td>
-  </tr>
-  <tr>
-    <th>Isolation Level</th>
-    <td>--TODO--</td>
-  </tr>
-  <tr>
-    <th>Justification</th>
-    <td>--TODO--</td>
-  </tr>
-  <tr>
-    <td colspan='2'>
-    ```SQL
-    insert into project (creationDate, name, description, private)
-    values ($creationDate, $name, $description, false);
-    ```
-    </td>
-  </tr>
+<tr>
+<th>T01</th>
+<td>**TODO**</td>
+</tr>
+<tr>
+<th>Isolation Level</th>
+<td>**TODO**</td>
+</tr>
+<tr>
+<th>Justification</th>
+<td>**TODO**</td>
+</tr>
 </table>
+```SQL
+**TODO**
+```
+ 
+| SQL Reference   | Transaction Name                    |
+| --------------- | ----------------------------------- |
+| Justification   | Justification for the transaction.  |
+| Isolation level | Isolation level of the transaction. |
+| `Complete SQL Code`                                   |
+ 
+...
+ 
 
-<!--
-***
 ## Revision history
 
-Changes made to the first submission:
+<!-- Changes made to the first submission:
 1. Item 1
 1. Item 2 -->
 
 ***
 
-GROUP1743, 23/04/2018
+GROUP1743, 16/04/2018
 
 > Mateus Pedroza Cortes Marques, up201601876@fe.up.pt
 > Bernardo Manuel Costa Barbosa, up201503477@fe.up.pt
