--- a/artifacts/A9/A9.md
+++ b/artifacts/A9/A9.md
@@ -15,7 +15,7 @@
 </tr>
 <tr>
 <th>Web Resource</th>
-<td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r103-register-action">R2103</a></td>
+<td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r103-register-action">R103</a></td>
 </tr>
 <tr>
 <td colspan='2'>
@@ -31,14 +31,63 @@ $address, $institution, $description, $birthDate, $idCountry)
 </table>
 
 
+#M02: Dashboard
+
 <table>
 <tr>
 <th>SQL102</th>
+<td>Get user projects</td>
+</tr>
+<tr>
+<th>Web Resource</th>
+<td><a>href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r202-view-projects">R202</a></td>
+</tr>
+<tr>
+<td colspan='2'>
+
+```SQL
+select * from project, usertable, joined
+where usertable.idUser = $idUser 
+AND usertable.idUser = joined.idUser 
+AND joined.idProject = project.idProject;
+```
+</td>
+</tr>
+</table>
+
+<table>
+<tr>
+<th>SQL103</th>
+<td>Get user tasks</td>
+</tr>
+<tr>
+<th>Web Resource</th>
+<td><a>href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r203-view-tasks">R203</a></td>
+</tr>
+<tr>
+<td colspan='2'>
+
+```SQL
+select * from tasks, usertable, assigned
+where usertable.idUser = $idUser 
+AND assigned.idUser = usertable.idUser 
+AND task.idTask = assigned.idTask;
+```
+</td>
+</tr>
+</table>
+
+
+#M03: Projects and Project Settings
+
+<table>
+<tr>
+<th>SQL104</th>
 <td>Creates a new project in the platform</td>
 </tr>
 <tr>
 <th>Web Resource</th>
-<td><a></a></td>
+<td><a>href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r305-create-project-action">R305</a></td>
 </tr>
 <tr>
 <td colspan='2'>
@@ -54,12 +103,12 @@ values ($creationDate, $name, $description, false);
 
 <table>
 <tr>
-<th>SQL103</th>
+<th>SQL105</th>
 <td>Get project members</td>
 </tr>
 <tr>
 <th>Web Resource</th>
-<td><a></a></td>
+<td><a>href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r306-view-project-members">R306</a></td>
 </tr>
 <tr>
 <td colspan='2'>
@@ -75,12 +124,12 @@ order by deadline asc;
 
 <table>
 <tr>
-<th>SQL104</th>
+<th>SQL106</th>
 <td>Get project tasks</td>
 </tr>
 <tr>
 <th>Web Resource</th>
-<td><a></a></td>
+<td><a>href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r301-view-project-tasks">R301</a></td>
 </tr>
 <tr>
 <td colspan='2'>
@@ -93,15 +142,14 @@ order by deadline asc;
 </tr>
 </table>
 
-
 <table>
 <tr>
-<th>SQL105</th>
+<th>SQL107</th>
 <td>Get project description</td>
 </tr>
 <tr>
 <th>Web Resource</th>
-<td><a></a></td>
+<td><a>href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r303-view-project-options">R303</a></td>
 </tr>
 <tr>
 <td colspan='2'></td>
@@ -115,75 +163,12 @@ select description from project where idProject = $idProject
 
 <table>
 <tr>
-<th>SQL106</th>
-<td>Get project name</td>
-</tr>
-<tr>
-<th>Web Resource</th>
-<td><a></a></td>
-</tr>
-<tr>
-<td colspan='2'>
-
-```SQL
-select name from project where idProject = $idProject
-``` 
-</td>
-</tr>
-</table>
-
-
-<table>
-<tr>
-<th>SQL107</th>
-<td>Get project members</td>
-</tr>
-<tr>
-<th>Web Resource</th>
-<td><a></a></td>
-</tr>
-<tr>
-<td colspan='2'>
- 
- ```SQL
-select username, password, email, name, gender, address, institution, description, birthDate, idCountry 
-from usertable, project, joined 
-where project.idProject = joined.idProject AND usertable.idUser = joined.idUser AND joined.idProject = $idProject;
-```
-</td>
-</tr>
-</table>
-
-
-<table>
-<tr>
 <th>SQL108</th>
-<td>Invite a user to the project</td>
-</tr>
-<tr>
-<th>Web Resource</th>
-<td><a></a></td>
-</tr>
-<tr>
-<td colspan='2'>
-  
-```SQL
-insert into joined (idUser, idProject, joinedDate, role)
-values ($idUser, $idProject, $joinedDate, $role)
-```  
-</td>
-</tr>
-</table>
-
-
-<table>
-<tr>
-<th>SQL109</th>
 <td>Remove a user from a project</td>
 </tr>
 <tr>
 <th>Web Resource</th>
-<td><a></a></td>
+<td><a>"https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r307-delete-project-member">R307</a></td>
 </tr>
 <tr>
 <td colspan='2'>
@@ -200,12 +185,12 @@ AND idProject = $idProject;
 
 <table>
 <tr>
-<th>SQL110</th>
+<th>SQL109</th>
 <td>Set user role</td>
 </tr>
 <tr>
 <th>Web Resource</th>
-<td><a></a></td>
+<td><a>"https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r309-edit-project-members-action">R309</a></td>
 </tr>
 <tr>
 <td colspan='2'>
@@ -222,12 +207,33 @@ where idUser = $idUser AND idProject = $idProject
 
 <table>
 <tr>
+<th>SQL110</th>
+<td>Invite a user to the project</td>
+</tr>
+<tr>
+<th>Web Resource</th>
+<td><a> **TODO** </a></td>
+</tr>
+<tr>
+<td colspan='2'>
+  
+```SQL
+insert into joined (idUser, idProject, joinedDate, role)
+values ($idUser, $idProject, $joinedDate, $role)
+```  
+</td>
+</tr>
+</table>
+
+
+<table>
+<tr>
 <th>SQL111</th>
 <td>Get project forum posts</td>
 </tr>
 <tr>
 <th>Web Resource</th>
-<td><a></a></td>
+<td><a>href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r302-view-project-forum">R302</a></td>
 </tr>
 <tr>
 <td colspan='2'>
@@ -243,20 +249,22 @@ order by lastEditDate asc;
 
 <table>
 <tr>
-<th>SQL111</th>
-<td>Get project forum posts</td>
+<th>SQL112</th>
+<td>Add a task</td>
 </tr>
 <tr>
 <th>Web Resource</th>
-<td><a></a></td>
+<td><a>href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r311-create-project-task-action">R311</a></td>
 </tr>
 <tr>
 <td colspan='2'>
- 
+  
 ```SQL
-select * from forumpost where idProject = $idProject
-order by lastEditDate asc;
-```
+insert into task (creationDate, lastEditDate, title, description, 
+deadline, completed, completetionDate, idUser, idProject)
+values ($date, $date, $title, $description, $deadline,
+FALSE, NULL, $idUser, $idProject)
+```  
 </td>
 </tr>
 </table>
@@ -264,12 +272,54 @@ order by lastEditDate asc;
 
 <table>
 <tr>
-<th>SQL112</th>
+<th>SQL113</th>
+<td>Delete a task</td>
+</tr>
+<tr>
+<th>Web Resource</th>
+<td><a>href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r301-delete-project-task">R312</a></td>
+</tr>
+<tr>
+<td colspan='2'>
+ 
+```SQL
+delete from tasks 
+where idTask = $idTask;
+``` 
+</td>
+</tr>
+</table>
+
+
+<table>
+<tr>
+<th>SQL114</th>
+<td>Submit a reply to a post</td>
+</tr>
+<tr>
+<th>Web Resource</th>
+<td><a> **TODO** </a></td>
+</tr>
+<tr>
+<td colspan='2'>
+  
+```SQL
+insert into forumpost (creationDate, lastEditDate, 
+title, content, idProject, idUser) 
+values ($date, $date, $title, $content, $idProject, $idUser);
+```
+</td>
+</tr>
+</table>
+
+<table>
+<tr>
+<th>SQL115</th>
 <td>Get project forum post replies</td>
 </tr>
 <tr>
 <th>Web Resource</th>
-<td><a></a></td>
+<td><a> **TODO** </a></td>
 </tr>
 <tr>
 <td colspan='2'>
@@ -285,7 +335,7 @@ order by creationDate asc;
 
 <table>
 <tr>
-<th>SQL113</th>
+<th>SQL116</th>
 <td>Submit a new post</td>
 </tr>
 <tr>
@@ -305,32 +355,9 @@ values ($date, $date, $title, $content, $idProject, $idUser);
 </table>
 
 
-
 <table>
 <tr>
-<th>SQL114</th>
-<td>Submit a reply to a post</td>
-</tr>
-<tr>
-<th>Web Resource</th>
-<td><a></a></td>
-</tr>
-<tr>
-<td colspan='2'>
-  
-```SQL
-insert into forumpost (creationDate, lastEditDate, 
-title, content, idProject, idUser) 
-values ($date, $date, $title, $content, $idProject, $idUser);
-```
-</td>
-</tr>
-</table>
-
-
-<table>
-<tr>
-<th>SQL115</th>
+<th>SQL117</th>
 <td>Update post content</td>
 </tr>
 <tr>
@@ -350,74 +377,14 @@ where idPost = $idPost;
 </table>
 
 
-
-<table>
-<tr>
-<th>SQL116</th>
-<td>Get project tasks</td>
-</tr>
-<tr>
-<th>Web Resource</th>
-<td><a></a></td>
-</tr>
-<tr>
-<td colspan='2'></td>
-</tr>
-</table>
-
-
-<table>
-<tr>
-<th>SQL117</th>
-<td>Add a task</td>
-</tr>
-<tr>
-<th>Web Resource</th>
-<td><a></a></td>
-</tr>
-<tr>
-<td colspan='2'>
-  
-```SQL
-insert into task (creationDate, lastEditDate, title, description, 
-deadline, completed, completetionDate, idUser, idProject)
-values ($date, $date, $title, $description, $deadline,
-FALSE, NULL, $idUser, $idProject)
-```  
-</td>
-</tr>
-</table>
-
-
 <table>
 <tr>
 <th>SQL118</th>
-<td>Delete a task</td>
-</tr>
-<tr>
-<th>Web Resource</th>
-<td><a></a></td>
-</tr>
-<tr>
-<td colspan='2'>
- 
-```SQL
-delete from tasks 
-where idTask = $idTask;
-``` 
-</td>
-</tr>
-</table>
-
-
-<table>
-<tr>
-<th>SQL119</th>
 <td>Complete task</td>
 </tr>
 <tr>
 <th>Web Resource</th>
-<td><a></a></td>
+<td><a>**TODO**</a></td>
 </tr>
 <tr>
 <td colspan='2'>
@@ -429,6 +396,31 @@ where idTask = $idTask;
 </td>
 </tr>
 </table>
+
+
+#M04: Search Engine
+
+
+<table>
+<tr>
+<th>SQL119</th>
+<td>Get project name</td>
+</tr>
+<tr>
+<th>Web Resource</th>
+<td><a>href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r301-view-searched-projects">R401</a></td>
+</tr>
+<tr>
+<td colspan='2'>
+
+```SQL
+select name from project where idProject = $idProject
+``` 
+</td>
+</tr>
+</table>
+
+
 
 ...
 ## 2. Transactions
