--- a/artifacts/A9/A9.md
+++ b/artifacts/A9/A9.md
@@ -2,7 +2,7 @@
  
 ## 1. Main Accesses
 
-# M01: Authentication and Individual Profile
+## M01: Authentication and Individual Profile
  
 > Main accesses to the database.
  
@@ -31,7 +31,7 @@ $address, $institution, $description, $birthDate, $idCountry)
 </table>
 
 
-# M02: Dashboard
+## M02: Dashboard
 
 <table>
 <tr>
@@ -40,7 +40,7 @@ $address, $institution, $description, $birthDate, $idCountry)
 </tr>
 <tr>
 <th>Web Resource</th>
-<td><a>href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r202-view-projects">R202</a></td>
+<td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r202-view-projects">R202</a></td>
 </tr>
 <tr>
 <td colspan='2'>
@@ -62,7 +62,7 @@ AND joined.idProject = project.idProject;
 </tr>
 <tr>
 <th>Web Resource</th>
-<td><a>href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r203-view-tasks">R203</a></td>
+<td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r203-view-tasks">R203</a></td>
 </tr>
 <tr>
 <td colspan='2'>
@@ -78,7 +78,7 @@ AND task.idTask = assigned.idTask;
 </table>
 
 
-# M03: Projects and Project Settings
+## M03: Projects and Project Settings
 
 <table>
 <tr>
@@ -87,7 +87,7 @@ AND task.idTask = assigned.idTask;
 </tr>
 <tr>
 <th>Web Resource</th>
-<td><a>href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r305-create-project-action">R305</a></td>
+<td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r305-create-project-action">R305</a></td>
 </tr>
 <tr>
 <td colspan='2'>
@@ -108,7 +108,7 @@ values ($creationDate, $name, $description, false);
 </tr>
 <tr>
 <th>Web Resource</th>
-<td><a>href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r306-view-project-members">R306</a></td>
+<td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r306-view-project-members">R306</a></td>
 </tr>
 <tr>
 <td colspan='2'>
@@ -129,7 +129,7 @@ order by deadline asc;
 </tr>
 <tr>
 <th>Web Resource</th>
-<td><a>href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r301-view-project-tasks">R301</a></td>
+<td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r301-view-project-tasks">R301</a></td>
 </tr>
 <tr>
 <td colspan='2'>
@@ -149,7 +149,7 @@ order by deadline asc;
 </tr>
 <tr>
 <th>Web Resource</th>
-<td><a>href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r303-view-project-options">R303</a></td>
+<td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r303-view-project-options">R303</a></td>
 </tr>
 <tr>
 <td colspan='2'></td>
@@ -168,7 +168,7 @@ select description from project where idProject = $idProject
 </tr>
 <tr>
 <th>Web Resource</th>
-<td><a>"https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r307-delete-project-member">R307</a></td>
+<td><a "https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r307-delete-project-member">R307</a></td>
 </tr>
 <tr>
 <td colspan='2'>
@@ -190,7 +190,7 @@ AND idProject = $idProject;
 </tr>
 <tr>
 <th>Web Resource</th>
-<td><a>"https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r309-edit-project-members-action">R309</a></td>
+<td><a "https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r309-edit-project-members-action">R309</a></td>
 </tr>
 <tr>
 <td colspan='2'>
@@ -212,7 +212,7 @@ where idUser = $idUser AND idProject = $idProject
 </tr>
 <tr>
 <th>Web Resource</th>
-<td><a> **TODO** </a></td>
+<td><a  **TODO** </a></td>
 </tr>
 <tr>
 <td colspan='2'>
@@ -233,7 +233,7 @@ values ($idUser, $idProject, $joinedDate, $role)
 </tr>
 <tr>
 <th>Web Resource</th>
-<td><a>href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r302-view-project-forum">R302</a></td>
+<td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r302-view-project-forum">R302</a></td>
 </tr>
 <tr>
 <td colspan='2'>
@@ -254,7 +254,7 @@ order by lastEditDate asc;
 </tr>
 <tr>
 <th>Web Resource</th>
-<td><a>href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r311-create-project-task-action">R311</a></td>
+<td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r311-create-project-task-action">R311</a></td>
 </tr>
 <tr>
 <td colspan='2'>
@@ -277,7 +277,7 @@ FALSE, NULL, $idUser, $idProject)
 </tr>
 <tr>
 <th>Web Resource</th>
-<td><a>href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r301-delete-project-task">R312</a></td>
+<td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r301-delete-project-task">R312</a></td>
 </tr>
 <tr>
 <td colspan='2'>
@@ -298,7 +298,7 @@ where idTask = $idTask;
 </tr>
 <tr>
 <th>Web Resource</th>
-<td><a> **TODO** </a></td>
+<td><a  **TODO** </a></td>
 </tr>
 <tr>
 <td colspan='2'>
@@ -319,7 +319,7 @@ values ($date, $date, $title, $content, $idProject, $idUser);
 </tr>
 <tr>
 <th>Web Resource</th>
-<td><a> **TODO** </a></td>
+<td><a  **TODO** </a></td>
 </tr>
 <tr>
 <td colspan='2'>
@@ -340,7 +340,7 @@ order by creationDate asc;
 </tr>
 <tr>
 <th>Web Resource</th>
-<td><a></a></td>
+<td><a </a></td>
 </tr>
 <tr>
 <td colspan='2'>
@@ -362,7 +362,7 @@ values ($date, $date, $title, $content, $idProject, $idUser);
 </tr>
 <tr>
 <th>Web Resource</th>
-<td><a></a></td>
+<td><a </a></td>
 </tr>
 <tr>
 <td colspan='2'>
@@ -384,7 +384,7 @@ where idPost = $idPost;
 </tr>
 <tr>
 <th>Web Resource</th>
-<td><a>**TODO**</a></td>
+<td><a **TODO**</a></td>
 </tr>
 <tr>
 <td colspan='2'>
@@ -398,7 +398,7 @@ where idTask = $idTask;
 </table>
 
 
-# M04: Search Engine
+## M04: Search Engine
 
 
 <table>
@@ -408,7 +408,7 @@ where idTask = $idTask;
 </tr>
 <tr>
 <th>Web Resource</th>
-<td><a>href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r301-view-searched-projects">R401</a></td>
+<td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r301-view-searched-projects">R401</a></td>
 </tr>
 <tr>
 <td colspan='2'>
