--- a/artifacts/A8/A8.md
+++ b/artifacts/A8/A8.md
@@ -11,17 +11,17 @@
 | US04 | Home Page | high | As a User, I want to access the home page, so that I can see a brief website's description.  |
 | US05 | About page | low | As a User, I want to access about page, so that I can see the complete information about the website. |
 | US06 | FAQ page | medium | As a User, I want to access FAQ page, so that I can get answers to most frequently asked questions. |
-| US07 | Contact page | medium | As a User, I want to access contact page, so that I can have ways to contact the owner if I want to.|
-| US08 | Search projects | high | As a User, I want to search through the projects that are open to me, so that I can see which one i want to contribute the most.|
-| US09 | View project | high | As a User, I want to have a page with the project description, short summary of the task list and forum, so that I can see how i can contribute and what's the current state of the project.|
-| US10 | Search Users | high | As a User, I want to search through the other user's profiles, so that I can connect with another user.|
-| US11 | View profiles | high | As a User, I want to be able to visit a page with the user information, so that I can inform myself about others (e.g. Their location).|
-| US14 | Access Dashboard | high | As an Authenticated User, I want to be able to access my dashboard, so that I can inform myself on relevant recent activity.|
-| US15 | View my projects | high | As an Authenticated I want to have a page where i can see all my projects, so that I can better access them.|
-| US17 | Log out | high | As a Authenticated User, I want to deauthenticate from the system.|
-| US21 | View Task | high | As a project member, I want to be able to view a task from the task list, so that I can see what is asked.|
-| US27 | View Forum | high | As a project member, I want to view forum posts, so that i can get a better understanding of what the project direction is.|
-| US45 | Administration Page | high | As a Website Administrator, I want to be able to access a Administration Page, so that i can better access tools to moderate the website.|
+| US07 | Contact page | medium | As a User, I want to access contact page, so that I can have ways to contact the owner if I want to. |
+| US08 | Search projects | high | As a User, I want to search through the projects that are open to me, so that I can see which one i want to contribute the most. |
+| US09 | View project | high | As a User, I want to have a page with the project description, short summary of the task list and forum, so that I can see how i can contribute and what's the current state of the project. |
+| US10 | Search Users | high | As a User, I want to search through the other user's profiles, so that I can connect with another user. |
+| US11 | View profiles | high | As a User, I want to be able to visit a page with the user information, so that I can inform myself about others (e.g. Their location). |
+| US14 | Access Dashboard | high | As an Authenticated User, I want to be able to access my dashboard, so that I can inform myself on relevant recent activity. |
+| US15 | View my projects | high | As an Authenticated I want to have a page where i can see all my projects, so that I can better access them. |
+| US17 | Log out | high | As a Authenticated User, I want to deauthenticate from the system. |
+| US21 | View Task | high | As a project member, I want to be able to view a task from the task list, so that I can see what is asked. |
+| US27 | View Forum | high | As a project member, I want to view forum posts, so that i can get a better understanding of what the project direction is. |
+| US45 | Administration Page | high | As a Website Administrator, I want to be able to access a Administration Page, so that i can better access tools to moderate the website. |
 
 ### 1.2. Implemented Web Resources
 
@@ -32,7 +32,7 @@
 | [R101: Login Action](https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r101-login-action) | [/login](http://lbaw1743.lbaw-prod.fe.up.pt/login)  |
 | [R102: Logout Action](https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r102-logout-action) | [/logout](http://lbaw1743.lbaw-prod.fe.up.pt/logout)  |
 | [R103: Register Action](https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r103-register-action) | [/register](http://lbaw1743.lbaw-prod.fe.up.pt/register)  |
-| [R104: View Profile](https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r104-view-profile)| [/profile/{id}](http://lbaw1743.lbaw-prod.fe.up.pt/profile/1) |
+| [R104: View Profile](https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A7/A7.md#r104-view-profile) | [/profile/{id}](http://lbaw1743.lbaw-prod.fe.up.pt/profile/1) |
 
 #### Module M02: Dashboard
 
@@ -96,31 +96,31 @@
 
 ## 2. Prototype
 
-The prototype is available at http://lbaw1743.lbaw-prod.fe.up.pt/
+The prototype is available [here](http://lbaw1743.lbaw-prod.fe.up.pt/)
 
 Credentials:
 
-* email: pputman0@usnews.com
+*   email: pputman0@usnews.com
 
-* password: PHreK9plUZ8
+*   password: PHreK9plUZ8
 
-The code is avalable at https://github.com/mpcmarques/lbaw1743/lbaw-laravel
+The code is avalable [here](https://github.com/mpcmarques/lbaw1743/lbaw-laravel)
 
 ## Revision history
 
 Changes made to the first submission:
 
-1. Added to the artifact more implemented User Stories.
+1.  Added to the artifact more implemented User Stories.
 
-2. Added to the artifact more implemented web resources.
+2.  Added to the artifact more implemented web resources.
 
-3. Added credentials at the prototype section, so that the tester can log in with the displayed account to access areas of the webapp that need auth (ex: dashboard).
+3.  Added credentials at the prototype section, so that the tester can log in with the displayed account to access areas of the webapp that need auth (ex: dashboard).
 
 ***
 
 GROUP1743, 16/04/2018
 
-> Mateus Pedroza Cortes Marques, up201601876@fe.up.pt
+> Mateus Pedroza Cortes Marques, up201601876@fe.up.pt  
 > Bernardo Manuel Costa Barbosa, up201503477@fe.up.pt
 > João Pedro Teixeira Pereira de Sá, up201506252@fe.up.pt
 > Mário Rui Macedo Flores dos Santos, up201503406@fe.up.pt
